tests/reference/asr-bindc_03-95dbba7.stderr
semantic error: Target type specified in c_p_pointer must have deferred shape.
 --> tests/errors/bindc_03.py:6:26
  |
6 |     A: Pointer[i16[:]] = c_p_pointer(b, i16[n * k], array([k * n]))
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
